update run.sh